修正  - 后台消息推送基本完成
待定
 - 消息推送机制过于臃肿
 - 需精简话使其更灵活以及轻便
 - 新机制仍思考中, 还未有合理方案





Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/logistics/templates/logistics.htm
+++ b/logistics/templates/logistics.htm
@@ -31,7 +31,7 @@
         {% if iii.items %}
           {% for item in iii.items %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
+            <td align="right" nowrap="true" colspan="2">{{ item.name }} [ {{ item.id }} ]</td>
             <td>{{ item.spec }}</td>
             <td>{{ item.num }}</td>
             {% proStatus item %}
@@ -41,7 +41,7 @@
         {% else %}
           {% for item in iii.pro_set.all %}
           <tr align="center">
-            <td align="right" nowrap="true" colspan="2">{{ item.name }}</td>
+            <td align="right" nowrap="true" colspan="2">{{ item.name }}[ {{ item.id }} ]</td>
             <td>{{ item.spec }}</td>
             <td>{{ item.num }}</td>
             <td><span class="status_{{ item.status }}">{{ item.get_status_display }}</span></td>
