修正  - 前台CSS修正
待定
 - 前台CSS模块化



Signed-off-by: leiddx <leiddx@vip.qq.com>

--- a/cart/templates/checkout.htm
+++ b/cart/templates/checkout.htm
@@ -2,8 +2,8 @@
 
 
 {% block content %}
-        <div class="pWhite">
-        <form action="/cart/submit/" method="post" name="to_checkout" id="toCheckout">
+        <div class="pWhite pd30">
+        <form action="{% url 'cart:submit' %}" method="post" name="to_checkout" id="toCheckout">
              <h3>订单状态</h3>
             <table width="100%" class="mBottom10">
                 <tr>
