--- a/about/templates/about.htm
+++ b/about/templates/about.htm
@@ -1,6 +1,6 @@
 {% extends "shop.base.htm" %} {% block content %}
-<div class="pWhite">
-  <h2>
+<div class="pWhite pd10">
+  <h2 class="lpd20 tpd20 bpd20">
     订购须知
   </h2>
   <p>
@@ -135,143 +135,162 @@
   <p>
     &nbsp;
   </p>
-  <h2>
+  <h2 class="lpd20 tpd20 bpd20">
     我如何收货
   </h2>
   <p>
     31客现支持市区内免费送货上门服务。
   </p>
-    <ul>
-      <li>
-        <b>
-          送货范围
-        </b>
-        ：市区以内，最远送货范围为天池山脚下、江南客运站、秀厢大道、清川大桥，更具体请参照如下送货区域图示，超出免费配送范围须加收10元。
-      </li>
-      <li>
-        <img src="/static/images/delivery_areas.jpg" />
-      </li>
-      <li>
-        <b>
-          送货方式
-        </b>
-        ：31客配送服务人员送货上门
-      </li>
-    </ul>
-    <p>
-      &nbsp;
-    </p>
-    <h2>
-      温馨提示 ：
-    </h2>
-    <p>
-      您在收到商品时，请根据31客发货单仔细检查验收所收到的商品，验收无误后再进行签收。如果发现商品短少、缺失、脏污、破损、配送错误等问题，请当场验收时指出，务必当时与我们的客服人员联系确认，31客将免费重新配送，过后将不予受理此类问题。
-    </p>
-    <p>
-      如订购商品出现断货现象，客服人员会及时与您联系，寻求您的指示，是等待调货或者取消订单，若您已经支付货款，取消订单后，我们会将货款及时为您退回。
-    </p>
-    <p>
-      如有特殊收货时间要求，请在订单留言处详细注明。
-    </p>
-    <p>
-      &nbsp;
-    </p>
-    <h2>
-      我如何结帐
-    </h2>
-    <p>
-      目前我们提供以下支付方式，完成此操作后，您的订单将不能再进行修改。
-    </p>
-    <p>&nbsp;</p>
-    <ul>
-      <li>
-        <b>货到付款</b>：如您的地址属可送货上门区域，我们推荐您选择此方式，您的货款将在订单送到后由送货员直接收取，请您务必确认签字。
-      </li>
-      <li>
-        <b>支付宝</b>：您也可选择使用支付宝支付您的货款。请在完成订单后，选择进入支付宝界面进行确认支付。不进行此步操作或支付信息失败，您的订单将无法发出，请重新确认支付。
-      </li>
-      <li>
-        <b>在线支付</b>：如您持有在线支付平台所支持的银行卡，您也可以选择用银行卡在线支付货款，请在完成订单后，选择进入银行支付界面进行确认支付，不进行此步操作或支付信息失败，您的订单将无法发出，请重新确认支付。
-      </li>
-      <li>
-        <b>异地结款</b>：接收人和付款人不在同一地址，根据实际情况另行确认。
-      </li>
-    </ul>
-    <p>&nbsp;</p>
-    <h2>
-      电话订购
-    </h2>
-    <p>
-      您可以拨打31客的400免费订购电话，将购买的商品、配送地址以及其他要求等信息，告知我们的电话订购人员，电话订购人员将帮您完成订购。 客服人员还可以根据您的要求，协助您挑选您满意的商品，并帮您完成订购。
-    </p>
-    <ul>
-      <li>
-        <b>
-          订购客服专线：4000-5927-31
-        </b>
-      </li>
-      <li>
-        <b>
-          服务时间：8:30AM~19:30PM
-        </b>
-      </li>
-    </ul>
-    <h2>
-      网上下单购买步骤
-    </h2>
-    <p>
-      <b>小提示</b>：如果您于当天19:30至次日8:30下单，送货时间最早为次日14:00 。
-    </p>
-    <h2>
-      31客网上购物共需四步：
-    </h2>
-    <ul>
-      <li>
-        1. 会员登录
-      </li>
-      <li>
-        2. 挑选商品
-      </li>
-      <li>
-        3. 确认购买信息
-      </li>
-      <li>
-        4. 订单提交完成
-      </li>
-    </ul>
-    <h3>
-      第一步：
-    </h3>
-    <p>
-      已注册会员请输入会员名及密码进行会员登录。如果您还不是会员，可先免费注册成为会员，享受31客网站更多优惠及服务。
-    </p>
-    <h3>
-      第二步：
-    </h3>
-    <p>
-      通过产品页面，选择您喜欢的商品；确认重量及购买数量后，点击&ldquo;购买&rdquo;按钮，将商品放入购物车。如需购买其它商品，请选择&ldquo;继续购物&rdquo;，将您喜欢的商品全部放入购物车后，点击&ldquo;我要购买&rdquo;按钮，进入下一步，如该商品有多款其它磅数可选，请选择将您需要的磅数放入购物车。
-      <br />
-      <br />
-    </p>
-    <p>
-      PS：在购物的全过程，您随时可点击页面右上方的&ldquo;购物车&rdquo;来查看您的购物现状。
-    </p>
-    <h3>
-      第三步：
-    </h3>
-    <p>
-      如果您是首次在31客网站购物，请按照提示步骤，准确提交订货人与收货人信息；如果您在31客网站有购物履历，系统会自动调取您最后一次购物时所留的信息；选择配送地区、配送方式、支付方式及送货时间要求，填写完毕后&ldquo;提交订单&rdquo;。
-      <br />
-      <br />
-    </p>
-    <p>
-      PS：需要特别说明的问题可填写在订货留言中。
-    </p>
-    <h3>
-      第四步：
-    </h3>
-    <p>
-      订单提交完成，系统会生成一个订单流水号，请您记下订单流水号以备查询。
-    </p>
+  <ul>
+    <li>
+      <b>
+        送货范围
+      </b>
+      ：市区以内，最远送货范围为天池山脚下、江南客运站、秀厢大道、清川大桥，更具体请参照如下送货区域图示，超出免费配送范围须加收10元。
+    </li>
+    <li>
+      <img src="/static/images/delivery_areas.jpg" />
+    </li>
+    <li>
+      <b>
+        送货方式
+      </b>
+      ：31客配送服务人员送货上门
+    </li>
+  </ul>
+  <p>
+    &nbsp;
+  </p>
+  <h2 class="lpd20 tpd20 bpd20">
+    温馨提示 ：
+  </h2>
+  <p>
+    您在收到商品时，请根据31客发货单仔细检查验收所收到的商品，验收无误后再进行签收。如果发现商品短少、缺失、脏污、破损、配送错误等问题，请当场验收时指出，务必当时与我们的客服人员联系确认，31客将免费重新配送，过后将不予受理此类问题。
+  </p>
+  <p>
+    如订购商品出现断货现象，客服人员会及时与您联系，寻求您的指示，是等待调货或者取消订单，若您已经支付货款，取消订单后，我们会将货款及时为您退回。
+  </p>
+  <p>
+    如有特殊收货时间要求，请在订单留言处详细注明。
+  </p>
+  <p>
+    &nbsp;
+  </p>
+  <h2 class="lpd20 tpd20 bpd20">
+    我如何结帐
+  </h2>
+  <p>
+    目前我们提供以下支付方式，完成此操作后，您的订单将不能再进行修改。
+  </p>
+  <p>
+    &nbsp;
+  </p>
+  <ul>
+    <li>
+      <b>
+        货到付款
+      </b>
+      ：如您的地址属可送货上门区域，我们推荐您选择此方式，您的货款将在订单送到后由送货员直接收取，请您务必确认签字。
+    </li>
+    <li>
+      <b>
+        支付宝
+      </b>
+      ：您也可选择使用支付宝支付您的货款。请在完成订单后，选择进入支付宝界面进行确认支付。不进行此步操作或支付信息失败，您的订单将无法发出，请重新确认支付。
+    </li>
+    <li>
+      <b>
+        在线支付
+      </b>
+      ：如您持有在线支付平台所支持的银行卡，您也可以选择用银行卡在线支付货款，请在完成订单后，选择进入银行支付界面进行确认支付，不进行此步操作或支付信息失败，您的订单将无法发出，请重新确认支付。
+    </li>
+    <li>
+      <b>
+        异地结款
+      </b>
+      ：接收人和付款人不在同一地址，根据实际情况另行确认。
+    </li>
+  </ul>
+  <p>
+    &nbsp;
+  </p>
+  <h2 class="lpd20 tpd20 bpd20">
+    电话订购
+  </h2>
+  <p>
+    您可以拨打31客的400免费订购电话，将购买的商品、配送地址以及其他要求等信息，告知我们的电话订购人员，电话订购人员将帮您完成订购。 客服人员还可以根据您的要求，协助您挑选您满意的商品，并帮您完成订购。
+  </p>
+  <ul>
+    <li>
+      <b>
+        订购客服专线：4000-5927-31
+      </b>
+    </li>
+    <li>
+      <b>
+        服务时间：8:30AM~19:30PM
+      </b>
+    </li>
+  </ul>
+  <h2 class="lpd20 tpd20 bpd20">
+    网上下单购买步骤
+  </h2>
+  <p>
+    <b>
+      小提示
+    </b>
+    ：如果您于当天19:30至次日8:30下单，送货时间最早为次日14:00 。
+  </p>
+  <h2 class="lpd20 tpd20 bpd20">
+    31客网上购物共需四步：
+  </h2>
+  <ul>
+    <li>
+      1. 会员登录
+    </li>
+    <li>
+      2. 挑选商品
+    </li>
+    <li>
+      3. 确认购买信息
+    </li>
+    <li>
+      4. 订单提交完成
+    </li>
+  </ul>
+  <h3 class="lpd30 tpd20 bpd20">
+    第一步：
+  </h3>
+  <p>
+    已注册会员请输入会员名及密码进行会员登录。如果您还不是会员，可先免费注册成为会员，享受31客网站更多优惠及服务。
+  </p>
+  <h3 class="lpd30 tpd20 bpd20">
+    第二步：
+  </h3>
+  <p>
+    通过产品页面，选择您喜欢的商品；确认重量及购买数量后，点击&ldquo;购买&rdquo;按钮，将商品放入购物车。如需购买其它商品，请选择&ldquo;继续购物&rdquo;，将您喜欢的商品全部放入购物车后，点击&ldquo;我要购买&rdquo;按钮，进入下一步，如该商品有多款其它磅数可选，请选择将您需要的磅数放入购物车。
+    <br />
+    <br />
+  </p>
+  <p>
+    PS：在购物的全过程，您随时可点击页面右上方的&ldquo;购物车&rdquo;来查看您的购物现状。
+  </p>
+  <h3 class="lpd30 tpd20 bpd20">
+    第三步：
+  </h3>
+  <p>
+    如果您是首次在31客网站购物，请按照提示步骤，准确提交订货人与收货人信息；如果您在31客网站有购物履历，系统会自动调取您最后一次购物时所留的信息；选择配送地区、配送方式、支付方式及送货时间要求，填写完毕后&ldquo;提交订单&rdquo;。
+    <br />
+    <br />
+  </p>
+  <p>
+    PS：需要特别说明的问题可填写在订货留言中。
+  </p>
+  <h3 class="lpd30 tpd20 bpd20">
+    第四步：
+  </h3>
+  <p>
+    订单提交完成，系统会生成一个订单流水号，请您记下订单流水号以备查询。
+  </p>
 </div>
 {% endblock %}
