--- a/account/templates/myord.htm
+++ b/account/templates/myord.htm
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-        <div class="pWhite">
+        <div class="pWhite pd10">
             <table width="100%">
                 <tr align="center">
                     <th>订单号</th>
