--- a/cart/templates/cart.htm
+++ b/cart/templates/cart.htm
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-        <div class="pWhite">
+        <div class="pWhite pd10">
             <div id="cart">
             <form name="toCart" method="post" action="{% url 'cart:cart' %}">
                 <table width="100%" cellpadding="3" class="mBottom50">
