--- a/cart/templates/consignee.htm
+++ b/cart/templates/consignee.htm
@@ -12,7 +12,7 @@
             <div class="mBottom50">
                 <h3>收货人信息</h3>
                 <p>（请填写详细收货地址及准确的最佳送货时间，以便更快捷将您订购的蛋糕送达！）</p>
-                <form action="/cart/checkout/" method="POST" name="checkout" id="checkout">
+                <form action="{% url 'cart:checkout' %}" method="POST" name="checkout" id="checkout">
                     <table width="100%" id="fnc">                        
                         <tr>
                             <td align="right" width="100px">{{ fnc.pay.label }}：</td>
