--- a/shop/static/shop/css/base.css
+++ b/shop/static/shop/css/base.css
@@ -48,6 +48,23 @@ header,footer,article,aside,section,nav,menu,hgroup{display:block;margin:0;paddi
 .lMargin10{margin-left:10px}
 .lrPadding10{padding:0 5px;}
 .lrPadding30{padding:0 60px;}
+.tmg10{margin-top:10px;}
+.tmg20{margin-top:20px;}
+.tmg30{margin-top:30px;}
+.bmg10{margin-bottom:10px;}
+.bmg20{margin-bottom:20px;}
+.bmg30{margin-bottom:30px;}
+.pd30{padding:30px;}
+.pd10{padding:10px;}
+.tpd10{padding-top:10px;}
+.tpd20{padding-top:20px;}
+.tpd30{padding-top:30px;}
+.bpd10{padding-bottom:10}
+.bpd20{padding-bottom:20px;}
+.bpd30{padding-bottom:30px;}
+.lpd10{padding-left:10px;}
+.lpd20{padding-left:20px;}
+.lpd30{padding-left:30px;}
 .bLine{border:solid rgb(229, 229, 229);border-width:0 0 1px 0;}
 .sTable tr td{padding:0 10px}
 .sBtn{height:25px;line-height:25px;padding:0 8px;font-size:11px;}
@@ -244,10 +261,10 @@ header,footer,article,aside,section,nav,menu,hgroup{display:block;margin:0;paddi
 .footerLayer{border-radius:0 0 10px 10px;background:#FFF;padding:15px;z-index:999;box-shadow:0px 3px 3px #A7A3A3;}
 #cart table{margin:25px 0 25px 0;}
 #cart table tr td{padding:7px;line-height:26px;}
-.pWhite{background-color:#FFFFFF;border:1px solid #d9d9d9;padding:10px;margin:0 0 30px 0;}
+.pWhite{background-color:#FFFFFF;border:1px solid #d9d9d9;margin:0 0 30px 0;}
 .pWhite h1{font-family:'Microsoft Yahei';}
-.pWhite h2{font-family:'Microsoft Yahei';padding:20px 0 20px 20px;}
-.pWhite h3{font-family:'Microsoft Yahei';padding:20px 0 20px 30px;}
+.pWhite h2{font-family:'Microsoft Yahei';}
+.pWhite h3{font-family:'Microsoft Yahei';}
 .pWhite p{line-height:24px;padding:0 0 0 40px}
 .pWhite ul li{margin:0 0 0 40px;line-height: 24px;}
 .pWhite table.ml40{margin:0 0 0 40px}
