--- a/new_ui/new31/css.css
+++ b/new_ui/new31/css.css
@@ -6,40 +6,34 @@ img{ border:0; float:left;}
 body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
 .clear{ clear:both; line-height:0; height:0; font-size:0;}
 
-#tl{ position:fixed;width:100%;top:0;left:0; font-size:14px;z-index:1000;}
-#tl #bar, #tl #bar dt, #tl #bar dd{line-height:24px;}
-#tl #bar{ width:886px; padding:10px 0; margin:0 auto; background:#FFF;}
-#tl #bar dt{ float:left; font-size:24px;}
-#tl #bar dd{ width:600px; float:right; text-align:right;}
+#tb{ position:fixed;width:100%;top:0;left:0; font-size:14px;z-index:1000;}
+#tb #bar, #tb #bar dt, #tb #bar dd{line-height:24px;}
+#tb #bar{ width:886px; padding:10px 0; margin:0 auto; background:#FFF;}
+#tb #bar dt{ float:left; font-size:24px;}
+#tb #bar dd{ width:600px; float:right; text-align:right;}
+#tb #bar dd a{ margin-left:5px;}
 
 #main{ width:886px; margin:0 auto; background:#FFF; padding:0 58px;}
 
-#main #top #logo a{ color:#5b2900;}
-#main #top #logo a:hover{ border:none;}
+#main #logo, #main #middle, #main #middle #bner{ float:left}
+#main #middle{ width:886px;border-top:1px solid #372c2a;min-height:480px;padding:0 0 50px;}
 
-#main #top .mti{ width:886px; float:left;}
-#main #top .mti dt{ color:#5b2900; font-size:30px; width:500px; float:left; padding-top:50px;}
-#main #top .mti dd{ width:150px; height:86px; float:right;}
-#main #top .menu{ width:886px; float:left; margin-bottom:20px; background:url(images/menu.jpg) bottom repeat-x; height:30px; overflow:hidden; line-height:22px; margin-top:15px;}
-#main #top .menu li{ width:92px; height:30px; float:left; padding-right:20px;}
-#main #top .menu li a{ display:block; width:72px; height:30px; float:left; background:url(images/menu_no.jpg) no-repeat; color:#cf9764; padding-left:20px;}
-#main #top .menu li a:hover{ background:url(images/menu_on.jpg) no-repeat;}
-#main #top .menu li a.on{ background:url(images/menu_on.jpg) no-repeat;}
-
-#main #middle{ width:886px; float:left; border-top:1px solid #372c2a; padding:0 0 50px;}
-#main #middle #bner{ width:886px; float:left; padding-bottom:20px;}
+#main #middle #bner{ width:886px;padding-bottom:20px;}
 
 #main #middle .mti{ width:886px; float:left;}
-#main #middle .mti dt{ color:#5b2900; font-size:30px; width:500px; float:left; padding-top:50px;}
-#main #middle .mti dd{ width:150px; height:86px; float:right;}
+#main #middle .mti a, #logo a{ color:#5b2900;border:none;text-decoration:none;}
+#main #middle .mti a:hover, #logo a:hover{ border:none;text-decoration:none; }
+#main #middle .mti dt, #logo dt{ color:#5b2900; font-size:30px; width:736px; float:left; padding-top:50px;}
+#main #middle .mti dd, #logo dd{ width:150px;height:86px;position:relative;float:right;top:45px;background:url(13741335652678.jpg)}
 #main #middle .menu{ width:886px; float:left; margin-bottom:20px; background:url(images/menu.jpg) bottom repeat-x; height:30px; overflow:hidden; line-height:22px; margin-top:15px;}
 #main #middle .menu li{ width:92px; height:30px; float:left; padding-right:20px;}
 #main #middle .menu li a{ display:block; width:72px; height:30px; float:left; background:url(images/menu_no.jpg) no-repeat; color:#cf9764; padding-left:20px;}
-#main #middle .menu li a:hover{ background:url(images/menu_on.jpg) no-repeat;}
-#main #middle .menu li a.on{ background:url(images/menu_on.jpg) no-repeat;}
+#main #middle .menu li a:hover{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none;}
+#main #middle .menu li a.on{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none; }
 
 #main #middle .lsv{ width:886px; float:left; padding-bottom:15px;}
 #main #middle .lsv img{ padding:2px;}
+#main #middle .more{ text-align:right;padding:0 5px 15px;}
 
 #main #middle #m{ width:886px; float:left; padding:15px 0;}
 #main #middle #m li{ width:218px; height:135px; float:left; padding:1px;}
@@ -98,7 +92,7 @@ body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
 
 #main #middle #pshow{ width:886px; float:left; padding-bottom:15px;}
 
-#main #middle #pshow #title{ width:886px; float:left; font-size:30px; color:#7c3b00;}
+#main #middle #pshow #titbe{ width:886px; float:left; font-size:30px; color:#7c3b00;}
 #main #middle #pshow #img{ width:535px; height:385px; float:left;}
 #main #middle #pshow #pr{ width:270px; float:right;}
 #main #middle #pshow #pr #ul{ width:270px; float:left; line-height:2;}
