--- a/new_ui/new31/css.css
+++ b/new_ui/new31/css.css
@@ -1,44 +1,47 @@
 /* CSS Document */
-*{ margin:0; padding:0; list-style:none;}
-a{ text-decoration:none; color:#4b3c37;}
+*{margin:0;padding:0;}
+a{text-decoration:none;color:#4b3c37;}
 a:hover{text-decoration:none;border-bottom:thick solid #5B2900;}
-img{ border:0; float:left;}
-body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
-.clear{ clear:both; line-height:0; height:0; font-size:0;}
+img{border:0;float:left;}
+body{font-size:12px;color:#4b3c37;font-family:Arial, Helvetica, sans-serif;background:#FFF;}
+ul, ol, dl{list-style:none;}
+.clear{clear:both;line-height:0;height:0;font-size:0;}
 
-#tb{ position:fixed;width:100%;top:0;left:0; font-size:14px;z-index:1000;}
-#tb #bar, #tb #bar dt, #tb #bar dd{line-height:24px;}
-#tb #bar{ width:886px; padding:10px 0; margin:0 auto; background:#FFF;}
-#tb #bar dt{ float:left; font-size:24px;}
-#tb #bar dd{ width:600px; float:right; text-align:right;}
-#tb #bar dd a{ margin-left:5px;}
+*html{/* 只有IE6支持 */background-image: url(about:blank); /* 使用空背景 */background-attachment: fixed; /* 固定背景 */}
+#tb{width:100%;position:fixed;top:0;left:0;z-index:1000;background:#FFF;}
+#tb{_position:absolute;_top: expression(documentElement.scrollTop + "px");}
+#tb #bar{width:886px;padding:10px 0;margin:0 auto;line-height:24px;}
+#tb #bar dt{float:left;font-size:24px;}
+#tb #bar dd{float:right;}
+#tb #bar dd a{margin: 0 5px;}
 
 #main{ width:886px; margin:0 auto; background:#FFF; padding:0 58px;}
 
-#main #logo, #main #middle, #main #middle #bner{ float:left}
-#main #middle{ width:886px;border-top:1px solid #372c2a;min-height:480px;padding:0 0 50px;}
+#main #top, #main #middle, #main #ft{width:100%;float:left;}
 
-#main #middle #bner{ width:886px;padding-bottom:20px;}
+#main .mti{width:100%;float:left;}
+#main .mti a{color:#5b2900;border:none;text-decoration:none;}
+#main .mti a:hover{border:none;text-decoration:none;}
+#main .mti dt{color:#5b2900;font-size:30px;float:left;padding-top:50px;}
+#main .mti dd{width:150px;height:86px;position:relative;float:right;top:45px;background:url(13741335652678.jpg)}
+#main .menu{width:100%;float:left;margin-bottom:20px;background:url(images/menu.jpg) bottom repeat-x;height:30px;overflow:hidden;line-height:22px;margin-top:15px;}
+#main .menu li{ width:92px; height:30px; float:left; padding-right:20px;}
+#main .menu li a{ display:block; width:72px; height:30px; float:left; background:url(images/menu_no.jpg) no-repeat; color:#cf9764; padding-left:20px;}
+#main .menu li a:hover{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none;}
+#main .menu li a.on{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none; }
 
-#main #middle .mti{ width:886px; float:left;}
-#main #middle .mti a, #logo a{ color:#5b2900;border:none;text-decoration:none;}
-#main #middle .mti a:hover, #logo a:hover{ border:none;text-decoration:none; }
-#main #middle .mti dt, #logo dt{ color:#5b2900; font-size:30px; width:736px; float:left; padding-top:50px;}
-#main #middle .mti dd, #logo dd{ width:150px;height:86px;position:relative;float:right;top:45px;background:url(13741335652678.jpg)}
-#main #middle .menu{ width:886px; float:left; margin-bottom:20px; background:url(images/menu.jpg) bottom repeat-x; height:30px; overflow:hidden; line-height:22px; margin-top:15px;}
-#main #middle .menu li{ width:92px; height:30px; float:left; padding-right:20px;}
-#main #middle .menu li a{ display:block; width:72px; height:30px; float:left; background:url(images/menu_no.jpg) no-repeat; color:#cf9764; padding-left:20px;}
-#main #middle .menu li a:hover{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none;}
-#main #middle .menu li a.on{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none; }
+#main #middle{ min-height:480px;padding:0 0 50px;}
 
-#main #middle .lsv{ width:886px; float:left; padding-bottom:15px;}
+#main #middle #bner{ padding-bottom:20px;float:left;}
+
+#main #middle .lsv{ float:left; padding-bottom:15px;}
 #main #middle .lsv img{ padding:2px;}
 #main #middle .more{ text-align:right;padding:0 5px 15px;}
 
-#main #middle #m{ width:886px; float:left; padding:15px 0;}
+#main #middle #m{ float:left; padding:15px 0;}
 #main #middle #m li{ width:218px; height:135px; float:left; padding:1px;}
 
-#main #middle #plist{ width:886px; float:left;}
+#main #middle #plist{ float:left;}
 #main #middle #plist dl{ width:886px; float:left; padding:20px 0; border-bottom:1px solid #a59d9a; color:#422819;}
 #main #middle #plist dl dt{ width:200px; height:144px; float:left;}
 #main #middle #plist dl dd.t{ width:460px; float:left; line-height:2; font-size:13px; padding-left:30px; padding-right:10px;}
@@ -52,8 +55,9 @@ body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
 #main #middle #left #lm li a:hover{ color:#cb9767;}
 #main #middle #left #lm li a.on{ color:#cb9767;}
 
-#main #middle #right{ width:670px; float:right;}
-#main #middle #right #show{ width:670px; float:left; min-height:550px; _height:550px;}
+#main #middle #right{width:670px; float:right;}
+#main #middle #right #show{width:670px; float:left;}
+#main #middle #right #show{_height:415px;}
 #main #middle #right #show #news{ width:670px; float:left; line-height:2;}
 #main #middle #right #show #news dl{ width:670px; float:left; padding:10px 0;}
 #main #middle #right #show #news dl dt{ width:670px; float:left;}
@@ -69,7 +73,6 @@ body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
 #main #middle #right #show #m_o dl{ width:160px; float:left; padding:3px;}
 #main #middle #right #show #m_o dl dt{ width:160px; height:86px;}
 #main #middle #right #show #m_o dl dd{ width:160px; float:left; padding-top:10px;}
-
 
 #main #middle #right #show img{ float:none;}
 #main #middle #right #show #m_i{ width:670px; float:left; line-height:30px;}
@@ -88,7 +91,6 @@ body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
 #main #middle #right #show .ltb .input{ border:1px solid #cc9866; padding:3px;}
 #main #middle #right #show .ltb .btn_login{ width:73px; height:24px; border:0; background:url(images/btn_login.jpg) no-repeat;}
 #main #middle #right #show .ltb .btn_tj{ width:73px; height:24px; border:0; background:url(images/btn_tj.jpg) no-repeat;}
-
 
 #main #middle #pshow{ width:886px; float:left; padding-bottom:15px;}
 
@@ -112,22 +114,22 @@ body{ font-size:12px; color:#4b3c37; font-family:Arial, Helvetica, sans-serif;}
 #main #middle #sr #cmd{ width:230px; float:left;}
 #main #middle #sr #cmd li{ width:61px; height:61px; float:left; padding:5px;}
 
-#ft{font-size:14px;}
-#ft #foot{ width:886px; padding:10px 0; margin:0 auto; background:#FFF; line-height:30px;}
-#ft #foot dt{ width:200px; float:left;}
-#ft #foot dd{ float:right; text-align:right;}
+#main #ft{font-size:14px;padding-bottom:5px;}
+#main #ft #foot{padding:10px 0;line-height:24px;}
+#main #ft #foot dt{float:left;}
+#main #ft #foot dd{float:right;}
 
-.paper{ width:100%; float:left; text-align:center; padding:10px 0;}
+.paper{width:100%; float:left; text-align:center; padding:10px 0;}
 
 #imgPlay {overflow:hidden; width:886px; zoom:1; position:relative; height:531px; float:left; overflow:hidden;}
 #imgPlay .imgs img {width:886px; height:531px;}
 #imgPlay .imgs li {width:886px; float: left; position: relative}
 #imgPlay .imgs {width: 5260px}
-#imgPlay .prev {background: url(images/imgPlayer.png) no-repeat; left:0; width: 46px; CURSOR: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
-#imgPlay .next {background: url(images/imgPlayer.png) no-repeat; left:0; width: 46px; CURSOR: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
+#imgPlay .prev {background: url(images/imgPlayer.png) no-repeat; left:0; width: 46px; cursor: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
+#imgPlay .next {background: url(images/imgPlayer.png) no-repeat; left:0; width: 46px; cursor: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
 #imgPlay .next {background-position: right 0px; right: 1px; left: auto}
 #imgPlay .num {display: inline; left: 400px; position: absolute; top: 275px; height: 19px}
-#imgPlay .num span {display: inline-block; background: url(images/imgPlayer.png) no-repeat -19px -83px; margin: 0px 2px; overflow: hidden; width: 14px; CURSOR: pointer; liNE-height: 0; height: 13px}
+#imgPlay .num span {display: inline-block; background: url(images/imgPlayer.png) no-repeat -19px -83px; margin: 0px 2px; overflow: hidden; width: 14px; cursor: pointer; line-height: 0; height: 13px}
 #imgPlay .num span.on {background-position: 1px -83px}
 #imgPlay .num .mc { float: left; width: 13px; height: 16px;}
 #imgPlay #numInner {background: none transparent scroll repeat 0% 0%;padding-top:3px; position: absolute; top:510px; text-align:center}
