--- a/new/static/new/css/css.css
+++ b/new/static/new/css/css.css
@@ -23,14 +23,14 @@ ul, ol, dl{list-style:none;}
 #main .mti a{color:#5b2900;border:none;text-decoration:none;}
 #main .mti a:hover{border:none;text-decoration:none;}
 #main .mti dt{color:#5b2900;font-size:30px;float:left;padding-top:50px;}
-#main .mti dd{width:150px;height:86px;position:relative;float:right;top:45px;background:url(13741335652678.jpg)}
-#main .menu{width:100%;float:left;margin-bottom:20px;background:url(images/menu.jpg) bottom repeat-x;height:30px;overflow:hidden;line-height:22px;margin-top:15px;}
+#main .mti dd{width:150px;height:86px;position:relative;float:right;top:45px;background:url(/static/new/images/13741335652678.jpg)}
+#main .menu{width:100%;float:left;margin-bottom:20px;background:url(/static/new/images/menu.jpg) bottom repeat-x;height:30px;overflow:hidden;line-height:22px;margin-top:15px;}
 #main .menu li{ width:92px; height:30px; float:left; padding-right:20px;}
-#main .menu li a{ display:block; width:72px; height:30px; float:left; background:url(images/menu_no.jpg) no-repeat; color:#cf9764; padding-left:20px;}
-#main .menu li a:hover{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none;}
-#main .menu li a.on{ background:url(images/menu_on.jpg) no-repeat;border:none;text-decoration:none; }
+#main .menu li a{ display:block; width:72px; height:30px; float:left; background:url(/static/new/images/menu_no.jpg) no-repeat; color:#cf9764; padding-left:20px;}
+#main .menu li a:hover{ background:url(/static/new/images/menu_on.jpg) no-repeat;border:none;text-decoration:none;}
+#main .menu li a.on{ background:url(/static/new/images/menu_on.jpg) no-repeat;border:none;text-decoration:none; }
 
-#main #middle{ min-height:480px;padding:0 0 50px;}
+#main #middle{ min-height:550px;padding:0 0 50px;}
 
 #main #middle #bner{ padding-bottom:20px;float:left;}
 
@@ -77,20 +77,20 @@ ul, ol, dl{list-style:none;}
 #main #middle #right #show img{ float:none;}
 #main #middle #right #show #m_i{ width:670px; float:left; line-height:30px;}
 #main #middle #right #show .input{ border:1px solid #cb9866; padding:3px;}
-#main #middle #right #show #m_i .btn_bc{ width:73px; height:24px; border:0; background:url(images/btn_bc.jpg) no-repeat;}
+#main #middle #right #show #m_i .btn_bc{ width:73px; height:24px; border:0; background:url(/static/new/images/btn_bc.jpg) no-repeat;}
 #main #middle #right #show .r{ color:#F00;}
-#main #middle #right #show #m_i .btn_cx{ width:73px; height:24px; border:0; background:url(images/btn_cx.jpg) no-repeat;}
-#main #middle #right #show #m_i .btn_tj{ width:73px; height:24px; border:0; background:url(images/btn_tj.jpg) no-repeat;}
+#main #middle #right #show #m_i .btn_cx{ width:73px; height:24px; border:0; background:url(/static/new/images/btn_cx.jpg) no-repeat;}
+#main #middle #right #show #m_i .btn_tj{ width:73px; height:24px; border:0; background:url(/static/new/images/btn_tj.jpg) no-repeat;}
 #main #middle #right #show #m_i #result{ color:#F00;}
-#main #middle #right #show #m_i .btn_tjdd{ width:75px; height:21px; border:0; background:url(images/btn_tjdd.jpg) no-repeat;}
-#main #middle #right #show #m_i .btn_zf{width:113px; height:19px; border:0; background:url(images/btn_tjdd.jpg) no-repeat;}
+#main #middle #right #show #m_i .btn_tjdd{ width:75px; height:21px; border:0; background:url(/static/new/images/btn_tjdd.jpg) no-repeat;}
+#main #middle #right #show #m_i .btn_zf{width:113px; height:19px; border:0; background:url(/static/new/images/btn_tjdd.jpg) no-repeat;}
 
 #main #middle #right #show #ab{ width:670px; float:left; line-height:2;}
 
 #main #middle #right #show .ltb{ width:335px; float:left; line-height:35px;}
 #main #middle #right #show .ltb .input{ border:1px solid #cc9866; padding:3px;}
-#main #middle #right #show .ltb .btn_login{ width:73px; height:24px; border:0; background:url(images/btn_login.jpg) no-repeat;}
-#main #middle #right #show .ltb .btn_tj{ width:73px; height:24px; border:0; background:url(images/btn_tj.jpg) no-repeat;}
+#main #middle #right #show .ltb .btn_login{ width:73px; height:24px; border:0; background:url(/static/new/images/btn_login.jpg) no-repeat;}
+#main #middle #right #show .ltb .btn_tj{ width:73px; height:24px; border:0; background:url(/static/new/images/btn_tj.jpg) no-repeat;}
 
 #main #middle #pshow{ width:886px; float:left; padding-bottom:15px;}
 
@@ -101,7 +101,7 @@ ul, ol, dl{list-style:none;}
 #main #middle #pshow #pr #gm{ width:270px; float:left; text-align:right; padding:10px 0;}
 #main #middle #pshow #pr #money{ font-size:27px; color:#5b2900; float:left; text-align:right; width:190px;}
 #main #middle #pshow #pr #btn{ width:73px; float:right;}
-#main #middle #pshow #pr #btn .btn_buy{ width:73px; height:24px; border:0; background:url(images/btn_buy.jpg) no-repeat; margin-bottom:5px;}
+#main #middle #pshow #pr #btn .btn_buy{ width:73px; height:24px; border:0; background:url(/static/new/images/btn_buy.jpg) no-repeat; margin-bottom:5px;}
 #main #middle #pshow #pr .th{}
 
 #main #middle #sl{ width:630px; float:left; line-height:2;}
@@ -125,11 +125,11 @@ ul, ol, dl{list-style:none;}
 #imgPlay .imgs img {width:886px; height:531px;}
 #imgPlay .imgs li {width:886px; float: left; position: relative}
 #imgPlay .imgs {width: 5260px}
-#imgPlay .prev {background: url(images/imgPlayer.png) no-repeat; left:0; width: 46px; cursor: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
-#imgPlay .next {background: url(images/imgPlayer.png) no-repeat; left:0; width: 46px; cursor: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
+#imgPlay .prev {background: url(/static/new/images/imgPlayer.png) no-repeat; left:0; width: 46px; cursor: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
+#imgPlay .next {background: url(/static/new/images/imgPlayer.png) no-repeat; left:0; width: 46px; cursor: pointer; text-indent: -9999px; position: absolute; top: 110px; height: 81px}
 #imgPlay .next {background-position: right 0px; right: 1px; left: auto}
 #imgPlay .num {display: inline; left: 400px; position: absolute; top: 275px; height: 19px}
-#imgPlay .num span {display: inline-block; background: url(images/imgPlayer.png) no-repeat -19px -83px; margin: 0px 2px; overflow: hidden; width: 14px; cursor: pointer; line-height: 0; height: 13px}
+#imgPlay .num span {display: inline-block; background: url(/static/new/images/imgPlayer.png) no-repeat -19px -83px; margin: 0px 2px; overflow: hidden; width: 14px; cursor: pointer; line-height: 0; height: 13px}
 #imgPlay .num span.on {background-position: 1px -83px}
 #imgPlay .num .mc { float: left; width: 13px; height: 16px;}
 #imgPlay #numInner {background: none transparent scroll repeat 0% 0%;padding-top:3px; position: absolute; top:510px; text-align:center}
